Add gulp build pipeline

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "litegui",
+  "name": "liteguijs",
   "version": "1.0.0",
-  "description": "litegui",
+  "description": "liteguijs is a library to create ui for editor",
   "main": "build/litegui.js",
   "directories": {
     "doc": "doc",
     "example": "examples"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build && gulp build-min",
+    "dev": "parcel index.html"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,17 @@
   "bugs": {
     "url": "https://github.com/SGGames/litegui.js/issues"
   },
-  "homepage": "https://github.com/SGGames/litegui.js#readme"
+  "homepage": "https://github.com/SGGames/litegui.js#readme",
+  "dependencies": {
+    "gulp": "^4.0.2",
+    "jquery": "^3.5.0",
+    "jquery-ui": "^1.12.1",
+    "lodash": "^4.17.15"
+  },
+  "devDependencies": {
+    "gulp-concat": "^2.6.1",
+    "gulp-concat-css": "^3.1.0",
+    "gulp-uglify": "^3.0.2",
+    "parcel-bundler": "^1.12.4"
+  }
 }
